--- a/Coffee_Roasting in TensorFlow/Coffee_Roasting_tf.ipynb
+++ b/Coffee_Roasting in TensorFlow/Coffee_Roasting_tf.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Coffee Roasting in TensorFlow Model**\n",
+        "# **Coffee Roasting in TensorFlow **\n",
         "\n",
         "\n",
         "\n",
